# aegis

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0298e3de0fcd_widen_verdict_constraint.py  0d26dba68d33_convert_osv_string_columns_to_text.py  0f7ba9ee0cf4_consolidate_post_initial_migrations.py  113539e19e11_add_argus_connection_table.py  182abf277f9d_add_sbom_component_manifest_location_.py  25f23cdfe06b_webhook_processed_delivery_dedup.py  29e7adbf895b_add_scan_trigger_metadata.py  2be1d26b5f3b_backfill_agent_engine_to_null.py  352f65aa0d5b_add_osv_mirror_tables.py  37051b2b381d_reanchor_sast_file_path_off_checkout_.py  3cb39a73c326_add_scim_managed_flag_to_users.py  40b8cafd7049_add_sbom_component_scope.py  41953bd5a8e8_add_frameworks_table_and_custom_control_.py  445135976fdc_add_asset_scoped_posture_snapshots.py  4ec44cccdb33_drop_finding_events_org.py  4f891e8375be_consolidate_post_initial_migrations.py  52e36215dd4a_v2_schema_diff.py  593038952b6d_drop_finding_events_denorm.py  59e79e977fb8_add_sbom_component_layer_attribution.py  5bb8a3bc6cbd_add_per_source_scan_and_sync_schedule_.py  5dc205191450_add_finding_verification_and_llm_config.py  5e3e0c4f74c9_argus_connection_oauth_columns.py  65515ca9a9b3_drop_audit_events_org_id.py  707b792c0813_constrain_notification_destinations_.py  708dfe4ac7fc_drop_reports_org.py  713b432e0824_notification_severity_report_status_checks.py  75498c675f46_status_state_check_constraints.py  7874c5c659a3_add_accepted_risk.py  7dccacda3c43_rename_finding_evidence_json_to_evidence.py  7e11f6ddc4e2_add_saml_validate_metadata_signature_.py  846aeeca99a7_standardize_tool_config_keys_to__.py  876f112b2034_add_cache_tables_and_repo_columns.py  87a45499d328_seed_bundled_framework_control_catalogs.py  88f583b1c73a_add_html_url_to_sboms.py  89a16b0078dc_drop_users_role_string.py  8e502a0c02b7_add_manual_flag_to_compliance_control_.py  8f227f22220a_add_suppression_to_compliance_control_.py  911a59a2ddc5_add_base_image_recommendations.py  9432aed20734_rename_scanner_tool_values_to__scanning_.py  94927735cbeb_add_package_release_dates.py  (+82 more)
backend/scripts/: check_permission_catalog.py
backend/src/: main.py  scheduler.py  storage.py  storage_init.py
backend/src/activity/: __init__.py  router.py  service.py
backend/src/agent_scanning/: __init__.py  ingest.py  lifecycle.py  scanner.py
backend/src/api_keys/: __init__.py  auth.py  middleware.py  models.py  router.py  service.py
backend/src/argus/: __init__.py  circuit_breaker.py  connector.py  heuristics.py  metrics.py  webhook.py
backend/src/assets/: __init__.py  grants.py  refs.py  router.py  service.py
backend/src/audit_log/: __init__.py  decorators.py  middleware.py  models.py  recorder.py  router.py
backend/src/audit_stream/: adapters.py  poster.py
backend/src/auth/: README.md  _gql_errors.py  cookies.py  csp.py  csrf.py  internal_router.py  jwt.py  login_router.py  rate_limit.py  redirects.py  security_headers.py  session_gate.py
backend/src/authz/: README.md
backend/src/code_scanning/: ai_review.py  baseline_delta.py  dependency_closure.py  diff_detector.py  file_finding_cache.py  import_graph.py  ingest.py  intel_fanout.py  lifecycle.py  merge.py  opengrep_adapter.py  router.py  scanner.py
backend/src/compliance/: __init__.py  auto_mapper.py  mapper.py  models.py  router.py  service.py
backend/src/connectors/: __init__.py  base.py  catalog.py  credentials.py  http.py  registry.py  router.py  secrets.py
backend/src/containers/: base_image_reco.py  baseline_delta.py  grype_adapter.py  image_metadata.py  intel_fanout.py  lifecycle.py  matcher.py  normalizer.py  router.py  sbom_store.py  scanner.py  (+4 more)
cli/: README.md  pyproject.toml
cli/aegis_cli/: __init__.py  client.py  comment_formatters.py  config.py  init_templates.py  main.py  output.py  report_formatters.py  sse_client.py  triage_helpers.py  watch_formatters.py
cli/tests/: test_client.py  test_commands_comment.py  test_commands_completion.py  test_commands_decide.py  test_commands_epss.py  test_commands_export.py  test_commands_findings.py  test_commands_init.py  test_commands_kev.py  test_commands_login.py  test_commands_report.py  test_commands_sbom.py  test_commands_sbom_diff.py  test_commands_scan.py  test_commands_shell.py  test_commands_status.py  test_commands_triage.py  test_commands_watch.py  test_comment_formatters.py  test_config.py  test_mcp_server.py  test_output.py  test_sse_client.py  test_triage_helpers.py  test_watch_formatters.py
runner/: .dockerignore  Dockerfile  README.md  SCANNER_IMAGE_CHANGES.md  SMOKE_TEST.md  agent.py  backend_client.py  dispatcher.py  executor.py  graceful_drain.py  honeypot.Dockerfile  image_manager.py  metrics.py  pyproject.toml  requirements.txt  streamer.py  structured_logging.py  uploader.py  vuln_runner.py
runner/clients/: __init__.py  backend.py  streamer.py  uploader.py
runner/core/: __init__.py  dispatcher.py
runner/observability/: __init__.py  logging.py  metrics.py
runner/sandbox/: __init__.py  agent_detonation.py  build.py  detonation.py  detonation_orchestrator.py  detonation_verdict.py  entry.py  gvisor.py  gvisor_probe.py  harness.py  honeypot.Dockerfile  honeypot.py  network.py  orchestrator.py  probe.py  probe_runner.py  runtime_app.py  runtime_verdict.py  sast_runtime.py  triage.py
runner/scanners/: __init__.py  _argus.py  _context.py  _manifest.py  _shared.py  _subprocess.py  base.py
runner/tests/: test_carveout_helper.py  test_carveouts.py  test_deep_audit_authz.py  test_fix_check.py  test_suppression_grounding.py
runner/verification/: __init__.py  budget.py  cache.py  carveouts.py  critic.py  cvss.py  enrich.py  fix_check.py  ground_truth.py  llm_client.py  pipeline.py
sdks/python/: README.md  pyproject.toml
(+2975 files in other folders)
