[project]
name = "security-portal-backend"
version = "0.1.0"
description = "FastAPI backend for the Security Portal product APIs."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.8.0",
  "httpx>=0.27.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "greenlet>=3.0",
  "bcrypt>=4.0",
  "psycopg2-binary>=2.9",
  "PyJWT>=2.8",
  "boto3>=1.35.0",
  "cryptography>=42.0",
  "strawberry-graphql[fastapi]>=0.235.0",
  "prometheus-client>=0.20.0",
  "idna>=3.15",
  "qrcode[pil]>=7.4",
  "pysaml2>=7.5.4",
  "pyopenssl>=24.0.0",
  "authlib>=1.6.12",
  "itsdangerous>=2.2.0",
  "weasyprint>=62,<63",
  # WeasyPrint 62 is incompatible with pydyf 0.11+ (upstream packaging bug)
  "pydyf>=0.10,<0.11",
  "jinja2>=3.1",
  # Multi-ecosystem version comparison for backend OSV matching (semver, PEP440,
  # Maven, Go, gem, NuGet, and distro dpkg/apk/rpm schemes).
  "univers>=30.11.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "testcontainers[postgres,minio]>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
