[project]
name = "aegis-cli"
version = "0.1.0"
description = "Aegis vulnerability scanner CLI for CI/CD and local development"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "mcp>=1.0.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "respx>=0.21",
]

[project.scripts]
aegis = "aegis_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
