[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-runner"
version = "0.1.0"
description = "Vulnerability Scanner Runner Agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "click>=8.0,<9.0",
    "prometheus-client>=0.20.0",
]

[project.scripts]
vuln-runner = "runner.vuln_runner:cli"

[tool.setuptools.packages.find]
include = ["runner*"]
