[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-runner"
version = "0.1.0"
description = "Vulnerability Scanner Runner Agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "click>=8.0,<9.0",
    "numpy>=1.26,<3.0",
    "onnxruntime>=1.17,<2.0",
    "psutil>=5.9",
    "prometheus-client>=0.20.0",
    "transformers>=4.40,<5.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10,<2.0",
    "vunnel>=0.30,<1.0",
]

[project.scripts]
vuln-runner = "runner.vuln_runner:cli"

[tool.setuptools.packages.find]
include = ["runner*"]
