[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-webhooks"
version = "0.1.0"
description = "Verify Aegis webhook signatures — HMAC-SHA256 receiver library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["aegis", "webhooks", "hmac", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["aegis_webhooks"]
